# align-api

./: Cargo.toml  README.md  rustfmt.toml
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/: config.rs  error.rs  lib.rs  logger.rs
crates/libs/lib-core/src/model/: mod.rs
crates/services/web-server/: Cargo.toml
crates/services/web-server/src/: main.rs
