[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- Config
clap = { workspace = true, features = ["derive", "env"] }

# -- HTTP
axum = "0.7.1"

# -- Tracing
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# -- Error Handling
thiserror = "1.0.50"

# -- JSON
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
validator = { version = "0.16.1", features = ["derive"] }
