[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# -- App Libs
lib-core = { path = "../../libs/lib-core" }

clap ={ workspace = true, features = ["derive", "env"] }
dotenvy = "0.15.7"
# -- Async
tokio = { version = "1.34.0", features = ["full"] }
async-trait = "0.1.74"
# -- HTTP
axum ={ version = "0.7.1", features = ["multipart"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["cors", "trace"] }
tower-cookies = { version = "0.10.0", features = ["private", "signed"] } 

# -- Tracing
tracing = { version = "0.1.40" }
